# Culiac-nRTS

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  README_CHANGELOG.md  add-to-changelog.sh  audio_system.rs  changelog-commands.sh  config.rs  errors.rs  index.md  multiplayer_system.rs  rustfmt.toml  save_system.rs  setup-hooks.sh  spatial.rs  todos.md  ui_core.rs
.claude/commands/: claude_context_md.md  commit-fast.md  commit.md  husky.md  rsi.md  todo.md
.claudia/agents/: audio-environmental-expert.md  campaign-systems-expert.md  combat-unit-systems-expert.md  core-systems-expert.md  ui-systems-expert.md
.github/workflows/: _pages_config.yml  ci.yml  hugo.yml
agents/agents/: ai-coordination-expert.md  configuration-save-systems-expert.md
assets/audio/: README.md
benches/: spatial_benchmarks.rs
docs/: ENVIRONMENTAL_SYSTEMS.md  IMPLEMENTATION_STATUS.md  PHASE_6A_PLAN.md  PROJECT_COMPLETION.md  TESTING_STATUS.md
hooks/: commit-msg  pre-commit
migrations/: 001_create_users_table.sql  002_create_sessions_table.sql  003_create_password_resets_table.sql  004_create_email_verifications_table.sql  005_create_oauth_providers_table.sql
public/: config.toml
src/: ai.rs  audio_system.rs  campaign.rs  components.rs  config.rs  coordination.rs  environmental_systems.rs  game_systems.rs  intel_system.rs  main.rs  multiplayer_system.rs  political_system.rs  resources.rs  save_system.rs  spawners.rs  systems.rs  ui_systems.rs  unit_systems.rs  utils.rs
src/audio/: audio_system.rs  mod.rs
src/auth/: README.md  database.rs  (+10 more)
(+29 files in other folders)
