[package]
name = "culiacan-rts"
version = "0.2.0"
edition = "2021"
authors = ["Battle of Culiacán RTS Team"]
description = "Historical RTS simulation of the Battle of Culiacán (October 17, 2019)"

[dependencies]
bevy = { version = "0.12", features = ["png", "wav", "mp3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
bevy_kira_audio = "0.18"
chrono = "0.4.41"
dirs = "5.0"

# Authentication & Web Server
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# OAuth
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls"], default-features = false }

# Validation
validator = { version = "0.16", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bench]]
name = "spatial_benchmarks"
harness = false

[[bin]]
name = "culiacan-rts"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
